src/test/ui/union/union-derive-eq.stderr
error[E0277]: the trait bound `PartialEqNotEq: std::cmp::Eq` is not satisfied
  --> $DIR/union-derive-eq.rs:15:5
   |
LL |     a: PartialEqNotEq, //~ ERROR the trait bound `PartialEqNotEq: std::cmp::Eq` is not satisfied
   |     ^^^^^^^^^^^^^^^^^ the trait `std::cmp::Eq` is not implemented for `PartialEqNotEq`
   |
   = note: required by `std::cmp::AssertParamIsEq`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
